# PlanB

./: .gitignore  pyproject.toml
calendars/: models.py  serializers.py  tests.py  urls.py  views.py
calendars/migrations/: 0001_initial.py  0002_initial.py  0003_alter_schedule_end_date_alter_schedule_end_time_and_more.py  0003_remove_schedule_google_url.py  0004_alter_schedule_memo.py  0005_alter_schedule_calendar.py
common/: models.py  tests.py
core/: settings.py  urls.py
memos/: models.py  serializers.py  tests.py  urls.py  views.py
memos/migrations/: 0001_initial.py  0002_initial.py  0003_alter_memo_memo_set.py  0004_alter_memo_memo_set.py
tags/: models.py  serializers.py  tests.py  urls.py  views.py
tags/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
tests/: __init__.py  auth_base_test.py
todos/: models.py  serializers.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py  0002_initial.py  0003_alter_todo_memo.py  0004_alter_subtodo_memo_alter_todo_todo_set.py  0005_alter_todo_todo_set.py
users/: models.py  serializers.py  tests.py  tokens.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birthday.py  0002_user_google_cal_url.py  0003_alter_user_is_active.py  0004_alter_user_managers.py
