[tool.poetry]
name = "plana"
version = "0.1.0"
description = "Planning Framework"
authors = ["NohSungwoo <shtjddn0817@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
django = "^5.1.2"
black = "^24.10.0"
isort = "^5.13.2"
drf-spectacular = "^0.27.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


